--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -47,7 +47,7 @@ Author URL: http://w3layouts.com
                 <div class="col-md-7 contact-right">
                     <ul>
                         <li class="alert alert-danger" role="alert"
-                            th:each="error : ${#fields.errors('contact.*')}" />
+                            th:each="error : ${#fields.errors('contact.*')}" th:text="${error}"/>
                     </ul>
                     <form th:action="@{/saveMsg}" method="post" class="signin-form" th:object="${contact}">
                         <div class="input-grids">
