--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+                xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
 <head>
 
 </head>
@@ -19,13 +20,22 @@
                 <div class="collapse navbar-collapse" id="navbarScroll">
                     <ul class="navbar-nav ms-auto my-2 my-lg-0 navbar-nav-scroll">
                         <li class="nav-item">
-                            <a th:href="@{/home}" class="nav-link active" aria-current="page">Home</a>
+                            <a th:href="@{/home}" sec:authorize="isAnonymous()" class="nav-link active" aria-current="page">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a th:href="@{/courses}" class="nav-link">Courses</a>
+                            <a th:href="@{/courses}" sec:authorize="isAnonymous()" class="nav-link">Courses</a>
                         </li>
                         <li class="nav-item">
-                            <a th:href="@{/contact}" class="nav-link">Contact</a>
+                            <a th:href="@{/contact}" sec:authorize="isAnonymous()" class="nav-link">Contact</a>
+                        </li>
+                        <li class="nav-item">
+                            <a th:href="@{/login}" sec:authorize="isAnonymous()" class="nav-link">Login</a>
+                        </li>
+                        <li class="nav-item">
+                            <a th:href="@{/dashboard}" sec:authorize="isAuthenticated()" class="nav-link">Dashboard</a>
+                        </li>
+                        <li class="nav-item">
+                            <a th:href="@{/logout}" sec:authorize="isAuthenticated()" class="nav-link">Logout</a>
                         </li>
                     </ul>
                 </div>
